fix univ av spacing mobile

--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -430,9 +430,9 @@
 	}
 
 	.mobile_text {
-		margin-top:50px;
+		margin-top:0px;
 		padding: 0 20px 0 20px;
-		text-align:center;
+		text-align:right;
 	}
 
 
